--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,17 @@
-/* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/theming";
+@include mat-core();
+
+$cam-balkon-primary: mat-palette($mat-blue-grey, 700, 300, 800);
+$cam-balkon-accent: mat-palette($mat-teal, A400, A200, A700);
+$cam-balkon-warn: mat-palette($mat-red, 900);
+
+$cam-balkon-theme: mat-light-theme(
+  $cam-balkon-primary,
+  $cam-balkon-accent,
+  $cam-balkon-warn
+);
+
+@include angular-material-theme($cam-balkon-theme);
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
