--- a/src/app/main/draw/draw.component.html
+++ b/src/app/main/draw/draw.component.html
@@ -1,1 +1,2 @@
-<cam-balkon-draw-container></cam-balkon-draw-container>
+<cam-balkon-draw-form class="form"></cam-balkon-draw-form>
+<cam-balkon-draw-container class="draw"></cam-balkon-draw-container>
