--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,10 +1,10 @@
 <mat-toolbar class="toolbar" color='primary'>
     <div>
-        <button routerLink="/dashboard" routerLinkActive="active" mat-button>Panel</button>
-        <button routerLink="/draw" routerLinkActive="active" mat-button>Çizim</button>
-        <button routerLink="/customer" routerLinkActive="active" mat-button>Müşteri</button>
-        <button routerLink="/product" routerLinkActive="active" mat-button>Ürün</button>
-        <button routerLink="/stock" routerLinkActive="active" mat-button>Stok Durumu</button>
+        <a routerLink="/dashboard" routerLinkActive="active" mat-button>Panel</a>
+        <a routerLink="/draw" routerLinkActive="active" mat-button>Çizim</a>
+        <a routerLink="/customer" routerLinkActive="active" mat-button>Müşteri</a>
+        <a routerLink="/product" routerLinkActive="active" mat-button>Ürün</a>
+        <a routerLink="/stock" routerLinkActive="active" mat-button>Stok Durumu</a>
     </div>
     <div>
         <button routerLink="/option" routerLinkActive="active" mat-icon-button>
