draw paper to konva

--- a/src/app/main/draw/draw.component.html
+++ b/src/app/main/draw/draw.component.html
@@ -1,2 +1,1 @@
-<cam-balkon-draw-form class="form"></cam-balkon-draw-form>
-<cam-balkon-draw-container class="draw"></cam-balkon-draw-container>
+<div #drawDiv id='drawDiv'></div>
