--- a/src/app/main/draw/draw.component.scss
+++ b/src/app/main/draw/draw.component.scss
@@ -1,16 +1,4 @@
-:host{
-    display: flex;
-    flex-direction: row;
+#drawDiv{
     width: 100%;
-}
-
-.draw{
-    width: 75%;
-    margin: 10px;
-    min-width: 500px;
-}
-.form{
-    width: 20%;
-    margin: 10px;
-    min-width: 150spx;
+    height: 100%;
 }
