drawList and form begin

--- a/Frontend/src/app/toolbar/toolbar.component.html
+++ b/Frontend/src/app/toolbar/toolbar.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="toolbar" color='primary'>
     <div>
         <a routerLink="/dashboard" routerLinkActive="active" mat-button>Panel</a>
-        <a routerLink="/draw" routerLinkActive="active" mat-button>Çizim</a>
+        <a routerLink="/draw/list" routerLinkActive="active" mat-button>Çizim</a>
         <a routerLink="/customer" routerLinkActive="active" mat-button>Müşteri</a>
         <a routerLink="/product" routerLinkActive="active" mat-button>Ürün</a>
         <a routerLink="/stock" routerLinkActive="active" mat-button>Stok Durumu</a>
