--- a/Frontend/src/app/main/draw/draw-list/draw-list.component.html
+++ b/Frontend/src/app/main/draw/draw-list/draw-list.component.html
@@ -18,3 +18,4 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+<cam-balkon-draw-add class="form"></cam-balkon-draw-add>
