--- a/Frontend/src/app/main/draw/draw-list/draw-list.component.scss
+++ b/Frontend/src/app/main/draw/draw-list/draw-list.component.scss
@@ -1,3 +1,12 @@
-table{
-    width: 60%;
+:host{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    height: 100%;
+    table{
+        width: 58%;
+    }
+    .form{
+        width: 40%;
+    }
 }
