--- a/Frontend/src/app/main/draw/draw-add/draw-add.component.scss
+++ b/Frontend/src/app/main/draw/draw-add/draw-add.component.scss
@@ -13,5 +13,12 @@
     .flex-column{
         display: flex;
         flex-direction: column;
+    }    
+    .flex-row{
+        display: flex;
+        flex-direction: row;
+    }
+    .margin-r-10{
+        margin-right: 10px;
     }
 }
