--- a/Frontend/src/styles.scss
+++ b/Frontend/src/styles.scss
@@ -15,3 +15,18 @@ $cam-balkon-theme: mat-light-theme(
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #455a64;
+  border-radius: 10px;
+}
