commit before uncle

--- a/Frontend/src/app/main/draw/thedraw/thedraw.component.html
+++ b/Frontend/src/app/main/draw/thedraw/thedraw.component.html
@@ -1,1 +1,2 @@
-<p>thedraw works!</p>
+<cam-balkon-draw-upper-view></cam-balkon-draw-upper-view>
+<cam-balkon-draw-front-view></cam-balkon-draw-front-view>
