--- a/Frontend/src/app/main/draw/thedraw/thedraw.component.html
+++ b/Frontend/src/app/main/draw/thedraw/thedraw.component.html
@@ -1,2 +1,8 @@
-<cam-balkon-draw-upper-view></cam-balkon-draw-upper-view>
-<cam-balkon-draw-front-view></cam-balkon-draw-front-view>
+<mat-tab-group>
+    <mat-tab label="Ustten Gorunus">
+        <cam-balkon-draw-upper-view></cam-balkon-draw-upper-view>
+    </mat-tab>
+    <mat-tab label="Onden Gorunus">
+        <cam-balkon-draw-front-view></cam-balkon-draw-front-view>
+    </mat-tab>
+</mat-tab-group>
